--- a/themes/Next/_config.yml
+++ b/themes/Next/_config.yml
@@ -225,11 +225,11 @@ auto_excerpt:
   enable: false
   length: 150
 
-# Post meta display settings
+# Post meta display settings,取消update at
 post_meta:
   item_text: true
   created_at: true
-  updated_at: true
+  updated_at: false
   categories: true
 
 # Post wordcount display settings
